--- a/templates/blitz.html.twig
+++ b/templates/blitz.html.twig
@@ -29,23 +29,22 @@
 				</div>
 				<div class="score-wrapper">
 					<div class="score-value-wrapper">
-						<p class="title-score">счет: </p>
-						<p class="game__score"></p>
+						<p class="title-score">счет:
+						</p>
+						<p class="game__score">0</p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-level">уровень: </p>
-						<p class="game__level"></p>
+						<p class="title-level">уровень:
+						</p>
+						<p class="game__level">0</p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-time">время: </p>
-						<p class="game__time"></p>
+						<p class="title-time">время:
+						</p>
+						<p class="game__time">2:00</p>
 					</div>
 				</div>
 			</div>
-
-			<p class="game__score"></p>
-			<p class="game__level"></p>
-			<p class="game__time"></p>
 		</main>
 	</body>
 	<script src="/js/game/player.js"></script>
@@ -54,4 +53,5 @@
 	<script src="/js/game/images.js"></script>
 	<script src="/js/game/blitz-game.js"></script>
 	<script src="/js/game/init-blitz-game.js"></script>
+	<script src="/js/game/game-end.js"></script>
 {% endblock %}
