--- a/templates/l40.html.twig
+++ b/templates/l40.html.twig
@@ -29,15 +29,18 @@
 				</div>
 				<div class="score-wrapper">
 					<div class="score-value-wrapper">
-						<p class="title-score">счет: </p>
+						<p class="title-score">счет:
+						</p>
 						<p class="game__score"></p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-level">уровень: </p>
+						<p class="title-level">уровень:
+						</p>
 						<p class="game__level"></p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-time">время: </p>
+						<p class="title-time">время:
+						</p>
 						<p class="game__time"></p>
 					</div>
 				</div>
