--- a/public/css/game-over.css
+++ b/public/css/game-over.css
@@ -7,8 +7,7 @@
     text-transform: uppercase;
 }
 
-.bg 
-{
+.bg {
     min-height: 100vh;
     width: 100vw;
     background: url(/images/bg.png) no-repeat;
@@ -16,8 +15,7 @@
 
 }
 
-.link 
-{
+.link {
     display: flex;
     align-items: center;
     justify-content: end;
@@ -27,30 +25,29 @@
     border-bottom: 3px solid #162419;
     border-right: 3px solid #1d3220;
     padding-right: 20px;
+    text-decoration: none;
 }
 
-.link__header 
-{
+.link__header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 9px;
 }
-.video-placeholder 
-{
+
+.video-placeholder {
     display: flex;
     justify-content: center;
 }
-.results-placeholder 
-{
+
+.results-placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.results 
-{
+.results {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -64,12 +61,11 @@
     gap: 20px;
 }
 
-.result-title 
-{
+.result-title {
     font-size: 32px;
 }
-.score 
-{
+
+.score {
     font-size: 92px;
     color: #E2FCDE;
     background-color: #162113;
