--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -6,29 +6,25 @@
     text-transform: uppercase;
 }
 
-body 
-{
+body {
     max-width: 100%;
     max-height: 100%;
     background-image: url(/images/bg.png);
     background-size: cover;
 }
 
-.main 
-{
+.main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.logo 
-{
+.logo {
     padding-top: 50px;
     padding-bottom: 250px;
 }
 
-.login 
-{
+.login {
     border-radius: 10px;
     box-sizing: border-box;
     background-color: white;
@@ -36,14 +32,12 @@ body
     padding: 21px 25px;
 }
 
-.login-input 
-{
+.login-input {
     display: flex;
     flex-direction: column;
 }
 
-.login__title 
-{
+.login__title {
     font-size: 32px;
     margin: 0 auto 15px;
     width: 850px;
@@ -51,8 +45,7 @@ body
 
 .login-input__username-input,
 .login-input__password-input,
-.login-input__password-again 
-{
+.login-input__password-again {
     border: none;
     box-sizing: border-box;
     padding-left: 15px;
@@ -67,26 +60,24 @@ body
 
 .login-input__username-input:not(:placeholder-shown),
 .login-input__password-input:not(:placeholder-shown),
-.login-input__password-again:not(:placeholder-shown) 
-{
+.login-input__password-again:not(:placeholder-shown) {
     color: white;
 }
+
 ::placeholder {
     color: #FFFFFF;
-  }
-.view-pass 
-{
+}
+
+.view-pass {
     display: none;
 }
 
-.login-input__button 
-{
+.login-input__button {
     display: flex;
     gap: 25px;
 }
 
-.register 
-{
+.register {
     width: 450px;
     padding: 15px 0;
     text-align: center;
@@ -99,8 +90,7 @@ body
     border: none;
 }
 
-.login-button 
-{
+.login-button {
     width: 375px;
     padding: 15px 0;
     text-align: center;
@@ -119,8 +109,7 @@ body
 .login-input__again-identical,
 .login-input__username-validation,
 .login-input__username-require,
-.login-input__username-employment 
-{
+.login-input__username-employment {
     font: 400 12px/16px "Russo One", sans-serif;
     text-align: left;
     color: rgba(232, 105, 97, 1);
