--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -1,31 +1,36 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Classic Game Over{% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game-over.css"/>{% endblock %}
+{% block title %}Classic Game Over
+{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/game-over.css"/>
+{% endblock %}
+{% block script %}
+	<script src="/js/game/game-over.js"></script>
+{% endblock %}
 {% block content %}
-    <div class="bg">
-        <div class="results-placeholder">
-            <div class="results">
-                <p class="result-title">финальный счет</p>
-                <p class="score">{{lastScore}}</p>
-                <p class="result-title">личный счет</p>
-                <p class="score">{{maxScore}}</p>
-                <p class="result-title">молодец! ещё немного! держи мотивирующее видео!</p>
+	<div class="bg">
+		<div class="results-placeholder">
+			<div class="results">
+				<p class="result-title">финальный счет</p>
+				<p class="score">{{lastScore}}</p>
+				<p class="result-title">личный счет</p>
+				<p class="score">{{maxScore}}</p>
+				<p class="result-title">молодец! ещё немного! держи мотивирующее видео!</p>
 
-                <div class="video-placeholder">
-                    <video controls height="300" poster="/images/cats.jpg">
-                    <source src="/video/ricroll.mp4" type="video/mp4">
-                    Ваш браузер не поддерживает встроенные видео :(
-                </video>
-            </div>
-                <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/game'">сыграть заново</h1>
-                </div>
-                <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/menu'">вернуться в меню</h1>
-                </div>
-            </div>
+				<div class="video-placeholder">
+					<video controls height="300" poster="/images/cats.jpg">
+						<source src="/video/ricroll.mp4" type="video/mp4">
+						Ваш браузер не поддерживает встроенные видео :(
+					</video>
+				</div>
+				<a class="link again">
+					<h1 class="link__header">сыграть заново</h1>
+				</a>
+				<a href="/menu" class="link">
+					<h1 class="link__header">вернуться в меню</h1>
+				</a>
+			</div>
 
-        </div>
-    </div>
+		</div>
+	</div>
 {% endblock %}
