--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -1,47 +1,55 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Tetris{% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game.css"/>{% endblock %}
+{% block title %}Tetris
+{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/game.css"/>
+{% endblock %}
 {% block content %}
-<body>
-   <main class="main">
-        <img class="logo" src="/images/logo.svg" alt="logo">
-        <div class="wrapper-game">
-            <div class="wrapper-field">
-                <div class="game__buffer"> 
-                    <p class="title">буффер</p>
-                    <div class="buffer-wrapper">
-                        <img class="buffer__figure" src="" alt="figure">
-                    </div>
-                </div>
-                <canvas id="game"></canvas>
-                <div class="next__figure">
-                    <p class="title">Следующие</p>
-                    <div class="wrapper-figures">
-                        <img class="figure"  src="" alt="figure">
-                        <img class="figure"  src="" alt="figure">
-                        <img class="figure"  src="" alt="figure">
-                        <img class="figure"  src="" alt="figure">               
-                    </div>
-                </div>     
-            </div>
-            <div class="score-wrapper">
-                <p class="title-score">счет:</p>
-                <p class="game__score"></p>
-                <p class="title-level">уровень:</p>
-                <p class="game__level"></p>
-            </div>
-        </div>
+	<body>
+		<main class="main">
+			<img class="logo" src="/images/logo.svg" alt="logo">
+			<div class="wrapper-game">
+				<div class="wrapper-field">
+					<div class="game__buffer">
+						<p class="title">буффер</p>
+						<div class="buffer-wrapper">
+							<img class="buffer__figure" src="" alt="figure">
+						</div>
+					</div>
+					<canvas id="game"></canvas>
+					<div class="next__figure">
+						<p class="title">Следующие</p>
+						<div class="wrapper-figures">
+							<img class="figure" src="" alt="figure">
+							<img class="figure" src="" alt="figure">
+							<img class="figure" src="" alt="figure">
+							<img class="figure" src="" alt="figure">
+						</div>
+					</div>
+				</div>
+				<div class="score-wrapper">
+					<div class="score-value-wrapper">
+						<p class="title-score">счет:
+						</p>
+						<p class="game__score">0</p>
+					</div>
+					<div class="score-value-wrapper">
+						<p class="title-level">уровень:
+						</p>
+						<p class="game__level">0</p>
+					</div>
+				</div>
+			</div>
 
-        <p class="game__score"></p>
-        <p class="game__level"></p>
-   </main>
-</body>
-<script src="/js/game/player.js"></script>
-<script src="/js/game/ui.js"></script>
-<script src="/js/game/figures.js"></script>
-<script src="/js/game/images.js"></script>
-<script src="/js/game/game.js"></script>
-<script src="/js/game/init-game.js"></script>
-<script src="/js/game/game-end.js"></script>
+			<p class="game__score"></p>
+			<p class="game__level"></p>
+		</main>
+	</body>
+	<script src="/js/game/player.js"></script>
+	<script src="/js/game/ui.js"></script>
+	<script src="/js/game/figures.js"></script>
+	<script src="/js/game/images.js"></script>
+	<script src="/js/game/game.js"></script>
+	<script src="/js/game/init-game.js"></script>
+	<script src="/js/game/game-end.js"></script>
 {% endblock %}
