--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,35 +1,39 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Signup{% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/register-style.css"/>{% endblock %}
-{% block script %}<script src="/js/register.js"></script>{% endblock %}
+{% block title %}Signup
+{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/register-style.css"/>
+{% endblock %}
+{% block script %}
+	<script src="/js/register.js"></script>
+{% endblock %}
 {% block content %}
-    <main class="main">
-        <div class="title">
-            <img class="logo" src="/images/logo.svg">
-        </div>
-        <div class="login">
-            <p class="login__title">добро пожаловать в славянский тетрис!</p>
-            {{ form_start(form, { 'attr' : { 'class': 'login-input' }})}}
-            <label for="register_user_input_login" hidden>Login</label>
-            {{ form_widget(form.login, { 'attr' : { 'class': 'login-input__username-input', 'placeholder': 'логин'}})}}
-            <p class="login-input__username-validation">неправильный формат логина</p>
-            <p class="login-input__username-require">введите логин</p>
-            <p class="login-input__username-employment">такое имя уже существует</p>
-            <label for="register_user_input_password" hidden>Password</label>
-            {{ form_widget(form.password, { 'attr' : { 'class': 'login-input__password-input', 'placeholder': 'пароль'}})}}
-            <p class="login-input__password-require">введите пароль</p>
-            <p class="login-input__password-validation">пароль должен содержать не менее 8 символов</p>
-            <label for="again-password" hidden>AgainPassword</label>
-            <input class="login-input__password-again" id="again-password" type="password" placeholder="повторите пароль">
-            <p class="login-input__again-require">введите пароль</p>
-            <p class="login-input__again-validation">пароль должен содержать не менее 8 символов</p>
-            <p class="login-input__again-identical">пароли должны должны быть одинаковыми</p>
-            <div class="login-input__button">
-                <a class="login-button" href="/login">вход</a>
-                <button class="register">регистрация</button>
-            </div>
-            {{ form_end(form) }}
-        </div>
-    </main>
+	<main class="main">
+		<div class="title">
+			<img class="logo" src="/images/logo.svg">
+		</div>
+		<div class="login">
+			<p class="login__title">добро пожаловать в славянский тетрис!</p>
+			{{ form_start(form, { 'attr' : { 'class': 'login-input' }})}}
+			<label for="register_user_input_login" hidden>Login</label>
+			{{ form_widget(form.login, { 'attr' : { 'class': 'login-input__username-input', 'placeholder': 'логин'}})}}
+			<p class="login-input__username-validation">неправильный формат логина</p>
+			<p class="login-input__username-require">введите логин</p>
+			<p class="login-input__username-employment">такое имя уже существует</p>
+			<label for="register_user_input_password" hidden>Password</label>
+			{{ form_widget(form.password, { 'attr' : { 'class': 'login-input__password-input', 'placeholder': 'пароль'}})}}
+			<p class="login-input__password-require">введите пароль</p>
+			<p class="login-input__password-validation">пароль должен содержать не менее 8 символов</p>
+			<label for="again-password" hidden>AgainPassword</label>
+			<input class="login-input__password-again" id="again-password" type="password" placeholder="повторите пароль">
+			<p class="login-input__again-require">введите пароль</p>
+			<p class="login-input__again-validation">пароль должен содержать не менее 8 символов</p>
+			<p class="login-input__again-identical">пароли должны должны быть одинаковыми</p>
+			<div class="login-input__button">
+				<a class="login-button" href="/login">вход</a>
+				<button class="register">регистрация</button>
+			</div>
+			{{ form_end(form) }}
+		</div>
+	</main>
 {% endblock %}
