--- a/templates/blitz.html.twig
+++ b/templates/blitz.html.twig
@@ -52,6 +52,6 @@
 	<script src="/js/game/figures.js"></script>
 	<script src="/js/game/images.js"></script>
 	<script src="/js/game/blitz-game.js"></script>
-	<script src="/js/game/init-blitz-game.js"></script>
+	<script src="/js/game/init-game.js"></script>
 	<script src="/js/game/game-end.js"></script>
 {% endblock %}
