--- a/templates/l40.html.twig
+++ b/templates/l40.html.twig
@@ -31,30 +31,27 @@
 					<div class="score-value-wrapper">
 						<p class="title-score">счет:
 						</p>
-						<p class="game__score"></p>
+						<p class="game__score">0</p>
 					</div>
 					<div class="score-value-wrapper">
 						<p class="title-level">уровень:
 						</p>
-						<p class="game__level"></p>
+						<p class="game__level">0</p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-time">время:
+						<p class="title-lines">количество линий:
 						</p>
-						<p class="game__time"></p>
+						<p class="game__lines">0</p>
 					</div>
 				</div>
 			</div>
-
-			<p class="game__score"></p>
-			<p class="game__level"></p>
-			<p class="game__time"></p>
 		</main>
 	</body>
 	<script src="/js/game/player.js"></script>
 	<script src="/js/game/ui.js"></script>
 	<script src="/js/game/figures.js"></script>
 	<script src="/js/game/images.js"></script>
-	<script src="/js/game/blitz-game.js"></script>
-	<script src="/js/game/init-blitz-game.js"></script>
+	<script src="/js/game/l40-game.js"></script>
+	<script src="/js/game/init-game.js"></script>
+	<script src="/js/game/game-end.js"></script>
 {% endblock %}
