--- a/public/css/game.css
+++ b/public/css/game.css
@@ -2,16 +2,24 @@
     border: none;
     padding: 0;
     margin: 0;
+
+    font-family: "Russo One", sans-serif;
+    font-weight: 400;
+    font-size: 32px;
+    color: #fff;  
+    text-transform: uppercase;
     text-decoration: none;
     user-select: none;
-    text-transform: uppercase;
+    border: none;
 }
 
+#game {
 #game {
     padding: 0 3px 3px 3px;
     background-color: white;
 }
 
+.main {
 .main {
     width: 100%;
     height: 100vh;
@@ -24,9 +32,11 @@
 }
 
 .logo {
+.logo {
     padding-bottom: 85px;
 }
 
+.wrapper-game {
 .wrapper-game {
     display: flex;
     align-items: flex-start;
@@ -35,11 +45,13 @@
 }
 
 .wrapper-field {
+.wrapper-field {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
 }
 
+.title {
 .title {
     font: 800 20px/20px "Russo One", sans-serif;
     background-color: white;
@@ -50,6 +62,7 @@
 }
 
 .buffer-wrapper {
+.buffer-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -57,6 +70,7 @@
     justify-content: center;
 }
 
+.game__buffer {
 .game__buffer {
     width: 167px;
     height: 134px;
@@ -69,12 +83,14 @@
 }
 
 .next__figure {
+.next__figure {
     width: 172px;
     height: 539px;
     background-image: url(/images/next_figures.png);
     background-size: 100% 100%;
 }
 
+.wrapper-figures {
 .wrapper-figures {
     width: 100%;
     height: 511px;
@@ -109,12 +125,15 @@
 }
 
 .score-wrapper {
+
+.score-wrapper {
     padding-top: 10px;
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
+
 
 .score-value-wrapper {
     display: flex;
