--- a/templates/l40.html.twig
+++ b/templates/l40.html.twig
@@ -46,6 +46,15 @@
 				</div>
 			</div>
 		</main>
+		<div class="instruction">
+			<h1>инструкция</h1>
+			<p class="instruction__text">движения по сторонам - соответствующие стрелочки или клавиши "ф" и "в"</p>
+			<p class="instruction__text">ускорение падения - стрелочка вниз или кнопка "ы"</p>
+			<p class="instruction__text">моментальная установка - пробел</p>
+			<p class="instruction__text">поворот фигуры по часовой стрелке - клавиша "ц"</p>
+			<p class="instruction__text">использование буффера - левый шифт (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
+			<p class="instruction__text">пауза - клавиша "з"</p>
+		</div>
 	</body>
 	<script src="/js/game/player.js"></script>
 	<script src="/js/game/ui.js"></script>
