--- a/public/css/game.css
+++ b/public/css/game.css
@@ -6,7 +6,7 @@
     font-family: "Russo One", sans-serif;
     font-weight: 400;
     font-size: 32px;
-    color: #fff;  
+    color: #fff;
     text-transform: uppercase;
     text-decoration: none;
     user-select: none;
@@ -14,12 +14,10 @@
 }
 
 #game {
-#game {
     padding: 0 3px 3px 3px;
     background-color: white;
 }
 
-.main {
 .main {
     width: 100%;
     height: 100vh;
@@ -32,11 +30,9 @@
 }
 
 .logo {
-.logo {
     padding-bottom: 85px;
 }
 
-.wrapper-game {
 .wrapper-game {
     display: flex;
     align-items: flex-start;
@@ -45,13 +41,11 @@
 }
 
 .wrapper-field {
-.wrapper-field {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
 }
 
-.title {
 .title {
     font: 800 20px/20px "Russo One", sans-serif;
     background-color: white;
@@ -62,7 +56,6 @@
 }
 
 .buffer-wrapper {
-.buffer-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -70,7 +63,6 @@
     justify-content: center;
 }
 
-.game__buffer {
 .game__buffer {
     width: 167px;
     height: 134px;
@@ -83,14 +75,12 @@
 }
 
 .next__figure {
-.next__figure {
     width: 172px;
     height: 539px;
     background-image: url(/images/next_figures.png);
     background-size: 100% 100%;
 }
 
-.wrapper-figures {
 .wrapper-figures {
     width: 100%;
     height: 511px;
@@ -124,7 +114,6 @@
     text-transform: uppercase;
 }
 
-.score-wrapper {
 
 .score-wrapper {
     padding-top: 10px;
@@ -134,7 +123,21 @@
     flex-direction: column;
 }
 
+.instruction {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 20px;
+}
 
+.instruction__text {
+    max-width: 250px;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
 .score-value-wrapper {
     display: flex;
     flex-direction: row;
