--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -29,21 +29,25 @@
 				</div>
 				<div class="score-wrapper">
 					<div class="score-value-wrapper">
-						<p class="title-score">счет:
-						</p>
-						<p class="game__score">0</p>
+						<p class="title-score">счет: </p>
+						<p class="game__score"></p>
 					</div>
 					<div class="score-value-wrapper">
-						<p class="title-level">уровень:
-						</p>
-						<p class="game__level">0</p>
+						<p class="title-level">уровень: </p>
+						<p class="game__level"></p>
 					</div>
 				</div>
 			</div>
-
-			<p class="game__score"></p>
-			<p class="game__level"></p>
 		</main>
+		<div class="instruction">
+			<h1>инструкция</h1>
+			<p class="instruction__text">движения по сторонам - соответствующие стрелочки или клавиши "ф" и "в"</p>
+			<p class="instruction__text">ускорение падения - стрелочка вниз или кнопка "ы"</p>
+			<p class="instruction__text">моментальная установка - пробел</p>
+			<p class="instruction__text">поворот фигуры по часовой стрелке - клавиша "ц"</p>
+			<p class="instruction__text">использование буффера - левый шифт (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
+			<p class="instruction__text">пауза - клавиша "з"</p>
+		</div>
 	</body>
 	<script src="/js/game/player.js"></script>
 	<script src="/js/game/ui.js"></script>
