начал добавлять мини профили, вынес верстку и скрипты в отдельный файл

--- a/templates/list_lobby.html.twig
+++ b/templates/list_lobby.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Menu
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/list_lobby.css"/>
+{% block style %}<link rel="stylesheet" href="/css/list_lobby.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -10,12 +10,19 @@
 			<img src="/images/settings.png" alt="settings" class="settings">
 			<img src="/images/logo.png" alt="logo" class="logo">
 			<div class="profile">
-				<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
+				{% if not user or not user.login %}
+					<a href="{{ path('register') }}">
+						<div class="profile">
+							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+							<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+						</div>
+					</a>
+				{% else %}
 					<div class="profile">
 						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
-				</a>
+				{% endif %}
 			</div>
 		</div>
         <div class="join-lobby">
@@ -26,7 +33,9 @@
         <h1 class="list-title">Список лобби<h1>
 		<div class="menu">
 		</div>
+		{% include 'mini-profile.html.twig' %}
 	</div>	
     <script src="/js/list_lobby.js"></script>
 	<script src="/js/list_lobby-socket.js"></script>
+	<script src="/js/mini-profile.js"></script>
 {% endblock %}
