--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Menu
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/select.css"/>
+{% block style %}<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -10,12 +10,19 @@
 			<img src="/images/settings.png" alt="settings" class="settings">
 			<img src="/images/logo.png" alt="logo" class="logo">
 			<div class="profile">
-				<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
+				{% if not user or not user.login %}
+					<a href="{{ path('register') }}">
+						<div class="profile">
+							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+							<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+						</div>
+					</a>
+				{% else %}
 					<div class="profile">
 						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
-				</a>
+				{% endif %}
 			</div>
 		</div>
 		<div class="menu">
@@ -61,8 +68,10 @@
 					</div>
 				</a>
 			</div>
-		</div>
+		</div>	
 	</div>
+	{% include 'mini-profile.html.twig' %}
 </body>
 <script src="/js/menu.js"></script>
+<script src="/js/mini-profile.js"></script>
 {% endblock %}
