--- a/templates/select-multiplayer-mode.html.twig
+++ b/templates/select-multiplayer-mode.html.twig
@@ -4,7 +4,10 @@
 	multiplayer mode
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/select.css"/>
+	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+{% endblock %}
+{% block script %}
+	<script src="/js/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="bg bg_dark">
@@ -12,12 +15,19 @@
 			<img src="/images/settings.png" alt="settings" class="settings"/>
 			<img src="/images/logo.png" alt="logo" class="logo"/>
 			<div class="profile">
-				<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
+				{% if not user or not user.login %}
+					<a href="{{ path('register') }}">
+						<div class="profile">
+							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+							<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+						</div>
+					</a>
+				{% else %}
 					<div class="profile">
 						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
-				</a>
+				{% endif %}
 			</div>
 		</div>
 		<div class="select">
@@ -56,5 +66,6 @@
 				</a>
 			</div>
 		</div>
+		{% include 'mini-profile.html.twig' %}
 	</div>
 {% endblock %}
